[gd_scene load_steps=8 format=2]

[ext_resource path="res://GameUI/MenuElements/SliderElement.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameUI/MenuElements/resources/dudelings_ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://GameUI/Menus/SubMenus/VolumeLevelsSubMenu/volume_levels_sub_menu.gd" type="Script" id=3]
[ext_resource path="res://GameUI/Menus/SubMenus/resources/sub_menu_backdrop_stylebox.tres" type="StyleBox" id=4]
[ext_resource path="res://GameUI/Menus/SubMenus/sub_menu_background_panel.gd" type="Script" id=5]
[ext_resource path="res://GameUI/Menus/SubMenus/resources/sub_menu_background_panel_stylebox.tres" type="StyleBox" id=6]
[ext_resource path="res://Assets/GameUI/fonts/custom/large_font.res" type="BitmapFont" id=7]

[node name="VolumeLevelsSubMenu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 1280, 720 )
custom_styles/panel = ExtResource( 4 )
script = ExtResource( 3 )

[node name="BackgroundPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = -309.0
margin_right = 270.0
margin_bottom = 261.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 540, 574 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 5 )

[node name="MenuContainer" type="VBoxContainer" parent="BackgroundPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 10
alignment = 1

[node name="HeaderLabel" type="Label" parent="BackgroundPanel/MenuContainer"]
margin_right = 540.0
margin_bottom = 40.0
grow_horizontal = 2
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 7 )
text = "VOLUME"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="BackgroundPanel/MenuContainer"]
margin_top = 50.0
margin_right = 540.0
margin_bottom = 574.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="ElementContainer" type="VBoxContainer" parent="BackgroundPanel/MenuContainer/ScrollContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 536.0
margin_bottom = 520.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="MasterVolumeSliderElement" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer" instance=ExtResource( 1 )]
margin_right = 532.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../AnnouncerVolumeSliderElement")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../MusicVolumeSliderElement")
focus_next = NodePath("../MusicVolumeSliderElement")
focus_previous = NodePath(".")
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Master"
play_pressed_sound = false

[node name="HSeparator0" type="HSeparator" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer"]
show_behind_parent = true
margin_top = 100.0
margin_right = 532.0
margin_bottom = 104.0

[node name="MusicVolumeSliderElement" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer" instance=ExtResource( 1 )]
margin_top = 104.0
margin_right = 532.0
margin_bottom = 204.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../MasterVolumeSliderElement")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../SoundVolumeSliderElement")
focus_next = NodePath("../SoundVolumeSliderElement")
focus_previous = NodePath("../MasterVolumeSliderElement")
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Music"
play_pressed_sound = false

[node name="HSeparator1" type="HSeparator" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer"]
show_behind_parent = true
margin_top = 204.0
margin_right = 532.0
margin_bottom = 208.0

[node name="SoundVolumeSliderElement" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer" instance=ExtResource( 1 )]
margin_top = 208.0
margin_right = 532.0
margin_bottom = 308.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../MusicVolumeSliderElement")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../UIVolumeSliderElement")
focus_next = NodePath("../UIVolumeSliderElement")
focus_previous = NodePath("../MusicVolumeSliderElement")
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Sound"
play_pressed_sound = false

[node name="HSeparator2" type="HSeparator" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer"]
show_behind_parent = true
margin_top = 308.0
margin_right = 532.0
margin_bottom = 312.0

[node name="UIVolumeSliderElement" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer" instance=ExtResource( 1 )]
margin_top = 312.0
margin_right = 532.0
margin_bottom = 412.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../SoundVolumeSliderElement")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../AnnouncerVolumeSliderElement")
focus_next = NodePath("../AnnouncerVolumeSliderElement")
focus_previous = NodePath("../SoundVolumeSliderElement")
size_flags_horizontal = 3
size_flags_vertical = 1
text = "U.I."

[node name="HSeparator3" type="HSeparator" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer"]
show_behind_parent = true
margin_top = 412.0
margin_right = 532.0
margin_bottom = 416.0

[node name="AnnouncerVolumeSliderElement" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer" instance=ExtResource( 1 )]
margin_top = 416.0
margin_right = 532.0
margin_bottom = 516.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../UIVolumeSliderElement")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../MasterVolumeSliderElement")
focus_next = NodePath(".")
focus_previous = NodePath("../UIVolumeSliderElement")
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Announcer"
play_pressed_sound = false
